# imaris_ims_file_reader

./: LICENCE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
imaris_ims_file_reader/: __init__.py  ims.py  ims_zarr_store.py
imaris_ims_file_reader/_tests/: test_imsClass.py  test_reader.py
