[metadata]
name = imaris-ims-file-reader
version = 0.1.0
author = Alan M Watson
author_email = alan.watson@pitt.edu
description = Imaris file format reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CBI-PITT/imaris_ims_file_reader
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/imaris_ims_file_reader/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
package_dir =
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	h5py>=3.5.0; python_version == "3.8"
    numpy>=1.21.3
	psutil>=5.8.0

[options.packages.find]
where = imaris_ims_file_reader