[metadata]
name = imaris_ims_file_reader

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/imaris_ims_file_reader
license = BSD-3-Clause
description = Class for reading Bitplane imaris files (*.ims)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/imaris_ims_file_reader/issues
    Documentation = https://github.com/CBI-PITT/imaris_ims_file_reader#README.md
    Source Code = https://github.com/CBI-PITT/imaris_ims_file_reader
    User Support = https://github.com/CBI-PITT/imaris_ims_file_reader/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
	h5py>=3.5.0
	hdf5plugin
	scikit-image
	zarr